<resources>
    <string name="app_name">TFCTienda</string>
    <string name="tvTiendaOnline"><u><b>TIENDA ONLINE</b></u></string>
    <string name="btnIniciarSesion">Iniciar sesión</string>
    <string name="btnCrearCuenta">Crear cuenta</string>
    <string name="tvInicioSesion">INICIAR SESIÓN</string>
    <string name="etInsertarCorreo">Introduce el correo electrónico</string>
    <string name="etInsertarContraseña">Introduce la contraseña</string>
    <string name="btnCrearUsuario"><u>Si no tienes usuario crea uno aqui</u></string>
    <string name="tvPantallaCreacionUsuario"><u>CREAR USUARIO</u></string>
    <string name="tvDniUsuario">Dni:</string>
    <string name="tvNombreUsuario">Nombre:</string>
    <string name="tvApellidosUsuario">Apellidos:</string>
    <string name="tvContraseña">Contraseña:</string>
    <string name="tvRepetirContraseña">Repetir contraseña:</string>
    <string name="tvTelefono">Teléfono:</string>
    <string name="tvCorreo">Correo electrónico:</string>
    <string name="btnCrearUsu">Crear usuario</string>
    <string name="btnVolver">Volver</string>
    <string name="tvMenuInicio"><b><u>MENÚ INICIO</u></b></string>
    <string name="tvBuscarProductosMenu">Buscar productos</string>
    <string name="tvCarrito">Mi carrito</string>
    <string name="tvMisProductos">Mis productos</string>
    <string name="tvRecomendaciones">Recomendaciones</string>
    <string name="tvOpciones">Opciones</string>
    <string name="tvCerrarSesion">Cerrar sesión</string>
    <string name="tvBuscarProductos"><b><u>BUSCAR PRODUCTOS</u></b></string>
    <string name="tvFiltros"><b>Filtros</b></string>
    <string name="btnRealizarCompra">Finalizar compra</string>
    <string name="btnEliminarProductoCarrito">Eliminar del carrito</string>
    <string name="tvCrearProducto">Eliminar del carrito</string>
    <string name="tvNombreProducto">Nombre del producto</string>
    <string name="tvStock">Stock</string>
    <string name="tvPrecioUnidad">Precio unidad</string>
    <string name="tvLugarProcedencia">Lugar de procedencia</string>
    <string name="tvFotoProducto">Foto</string>
    <string name="tvFotoProductoVacia">No hay foto subida</string>
    <string name="btnSubirFoto">Elige una foto</string>
    <string name="btnCrearProducto">Crear producto</string>
    <string name="btnEliminarProducto">Eliminar producto</string>
    <string name="btnModificarProducto">Modificar producto</string>
    <string name="chbEdad">Confirme que es mayor de edad</string>
</resources>