<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:stretchColumns="*">

    <TableRow android:layout_margin="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/blue"
            android:textSize="24dp"
            android:text="@string/tvMenuInicio"
            android:textColor="@color/black" />
    </TableRow>

    <TableRow android:layout_margin="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/tvBuscarProductosMenu"
            android:textColor="@color/black" />
    </TableRow>

    <TableRow android:layout_margin="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/tvCarrito"
            android:textColor="@color/black" />
    </TableRow>

    <TableRow android:layout_margin="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/tvMisProductos"
            android:textColor="@color/black" />
    </TableRow>

    <TableRow android:layout_margin="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/tvRecomendaciones"
            android:textColor="@color/black" />
    </TableRow>

    <TableRow android:layout_margin="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/tvOpciones"
            android:textColor="@color/black" />
    </TableRow>

    <TableRow android:layout_margin="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/tvCerrarSesion"
            android:textColor="@color/black" />
    </TableRow>
</TableLayout>